# breom

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
benchmark/: RULES.md  run.go  run.sh
docs/: en.md  ko.md
editors/jetbrains/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/http/: main.brm
install/: linux.sh  macos.sh  windows.ps1
src/: breom.pest  main.rs  pipeline.rs  project.rs
src/ast/: attributes.rs  common.rs  declarations.rs  expressions.rs  mod.rs  program.rs  statements.rs  tests.rs  types.rs
src/codegen/: bindings.rs  context.rs  execution.rs  func.rs  mod.rs  return_types.rs  runtime.rs  types.rs
src/lsp/: analysis.rs  document.rs  mod.rs  references.rs  semantic_tokens.rs  symbols.rs  workspace.rs
src/runtime/: arc.rs  array.rs  chan.rs  common.rs  error.rs  map.rs  mod.rs  sched.rs  set.rs  string.rs  test_api.rs  tests.rs
std/builtin/: print.brm  types.brm
tests/: RULES.md  TEST_MATRIX.md
tests/attribute/: main.brm  main_test.brm  project.breom
tests/concurrency/: main.brm  main_test.brm  project.breom
tests/conditional/: main_test.brm  project.breom
tests/control/: main.brm  main_test.brm  project.breom
tests/error/: main.brm  main_test.brm  project.breom
tests/file_io/: main.brm  main_test.brm  project.breom
tests/loop/: main_test.brm  project.breom
tests/net/: main.brm  main_test.brm  project.breom
tests/syntax/: main.brm  main_test.brm  project.breom
(+248 files in other folders)
