[package]
name = "breom"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
cranelift-codegen = "0.128.1"
cranelift-frontend = "0.128.1"
cranelift-module = "0.128.1"
cranelift-jit = "0.128.1"
cranelift-native = "0.128.1"
anyhow = "1.0"
tokio = { version = "1.34", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
semver = "1.0"
